@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Return the authrorization number of the original transaction in the SkipJack gateway [cody]
+#
 # * Update format of line items given to the gateway. Cleanup and uncomment unit tests [cody]
 #
 # * Add support for the SkipJack gateway [b...@atomicobject.com, cody]
